added lipid residence time summary data (excel sheet) and analysis notebook

--- a/Compute_Basic_Residue_SASA_Table.ipynb
+++ b/Compute_Basic_Residue_SASA_Table.ipynb
@@ -159,13 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "304f0369ff244d61827fce333a4628db",
+       "model_id": "a0bae3b1e05c4df18839c4065eddc6c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,8 +197,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Frame</th>\n",
        "      <th>System</th>\n",
+       "      <th>Frame</th>\n",
        "      <th>ARG_1</th>\n",
        "      <th>ARG_15</th>\n",
        "      <th>ARG_21</th>\n",
@@ -223,8 +223,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Piezo_PIP2</td>\n",
+       "      <td>0</td>\n",
        "      <td>231.301604</td>\n",
        "      <td>135.752731</td>\n",
        "      <td>90.688006</td>\n",
@@ -247,8 +247,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Piezo_PIP2</td>\n",
+       "      <td>1</td>\n",
        "      <td>216.110266</td>\n",
        "      <td>174.780170</td>\n",
        "      <td>99.509969</td>\n",
@@ -271,8 +271,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Piezo_PIP2</td>\n",
+       "      <td>2</td>\n",
        "      <td>231.161291</td>\n",
        "      <td>155.527715</td>\n",
        "      <td>86.489593</td>\n",
@@ -295,8 +295,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Piezo_PIP2</td>\n",
+       "      <td>3</td>\n",
        "      <td>228.219199</td>\n",
        "      <td>141.413725</td>\n",
        "      <td>90.376183</td>\n",
@@ -319,8 +319,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>Piezo_PIP2</td>\n",
+       "      <td>4</td>\n",
        "      <td>251.849992</td>\n",
        "      <td>146.331118</td>\n",
        "      <td>116.490590</td>\n",
@@ -347,12 +347,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Frame      System       ARG_1      ARG_15      ARG_21     ARG_22  \\\n",
-       "0      0  Piezo_PIP2  231.301604  135.752731   90.688006  37.036016   \n",
-       "1      1  Piezo_PIP2  216.110266  174.780170   99.509969  16.703098   \n",
-       "2      2  Piezo_PIP2  231.161291  155.527715   86.489593   9.983953   \n",
-       "3      3  Piezo_PIP2  228.219199  141.413725   90.376183   4.560580   \n",
-       "4      4  Piezo_PIP2  251.849992  146.331118  116.490590  12.492968   \n",
+       "       System  Frame       ARG_1      ARG_15      ARG_21     ARG_22  \\\n",
+       "0  Piezo_PIP2      0  231.301604  135.752731   90.688006  37.036016   \n",
+       "1  Piezo_PIP2      1  216.110266  174.780170   99.509969  16.703098   \n",
+       "2  Piezo_PIP2      2  231.161291  155.527715   86.489593   9.983953   \n",
+       "3  Piezo_PIP2      3  228.219199  141.413725   90.376183   4.560580   \n",
+       "4  Piezo_PIP2      4  251.849992  146.331118  116.490590  12.492968   \n",
        "\n",
        "       HSD_27     LYS_30      LYS_42      ARG_63  ...    HSD_4198    ARG_4210  \\\n",
        "0   81.810311  31.582857  158.942089  227.416121  ...   41.210847  155.335757   \n",
@@ -378,7 +378,7 @@
        "[5 rows x 509 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,8 +391,7 @@
     "    basicResidueSASAtable[entryName]=SASA_data.values()[ii]\n",
     "basicResidueSASAtable=basicResidueSASAtable[np.concatenate([\n",
     "    ['System','Frame'],\n",
-    "    basicResidueSASAtable.columns\n",
-    "])]\n",
+    "    basicResidueSASAtable.columns[2:]])]\n",
     "basicResidueSASAtable.to_csv('basicResidueSASA.csv',index=False)\n",
     "basicResidueSASAtable.head()"
    ]
