more typo fixes

--- a/Clean_Lipid_Residence_Time_Data.ipynb
+++ b/Clean_Lipid_Residence_Time_Data.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#baseDir=Piezo_PIP2_binding_analysis.git"
+    "#baseDir='Piezo_PIP2_binding_analysis'"
    ]
   },
   {
