--- a/Compute_Basic_Residue_SASA_Table.ipynb
+++ b/Compute_Basic_Residue_SASA_Table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,15 @@
     "import sys\n",
     "import gc\n",
     "import copy\n",
-    "import nglview as nv"
+    "import nglview as nv\n",
+    "\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact, interact_manual\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,8 +53,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NGLView can allow us to look at the structure directly within the notebook.\n",
+    "\n",
+    "Warning: google colab seems to have trouble with this as nglview apparently crashes the kernel"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,8 +106,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets inspect the residues. A widget proves helpful here since there are many and we \n",
+    "will need to be able to look up information about the atoms in each one."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb76db28af724b78832db8eeaa00fa94",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "aW50ZXJhY3RpdmUoY2hpbGRyZW49KERyb3Bkb3duKGRlc2NyaXB0aW9uPXUnU2VsZWN0ZWRfUmVzaWR1ZScsIG9wdGlvbnM9KHUnQVJHXzAnLCB1J0xFVV8xJywgdSdMRVVfMicsIHUnQVNQXzPigKY=\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact\n",
+    "def get_residue_atomInfo(Selected_Residue=[\n",
+    "    \"%s_%g\"%(iterTraj.top.residue(resID).name,\n",
+    "             iterTraj.top.residue(resID).index) \\\n",
+    "    for resID in np.arange(iterTraj.top.n_residues)]):\n",
+    "    resNum=int(Selected_Residue.split('_')[1])+1\n",
+    "    atomDat=np.array(map(lambda x: x.replace('#','').split(),\n",
+    "        pt.resinfo(iterTraj.top,'atominfo :%g'%resNum,viewStruc[0],task='atominfo').split('\\n')))\n",
+    "    return pd.DataFrame(data=list(atomDat[1:-1]),columns=atomDat[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,14 +155,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now have the information we need to compute SASA data for each cationic residue (HSD, LYS, ARG).\n",
+    "\n",
+    "We will only include atoms of the cationic regions.\n",
+    "\n",
+    "This will yield a SASA calculation for each frame. The data table will be quite large.\n",
+    "\n",
+    "We will process this raw data during the analysis step."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccada14a2e9640b6b45a1f2fe92ddbaf",
+       "model_id": "a90d0993a4fe47ac9fa9f0c173ee78ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,9 +187,39 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "basicResidueIDs=[res.original_resid for res in \\\n",
+    "                 viewStruc.top.residues if res.name in ['HSD','LYS','ARG']]\n",
+    "\n",
+    "masksDict={\n",
+    "    'ARG':'@NE,NH1,NH2,HE,HH11,HH12,HH21,HH22,CZ',\n",
+    "    'LYS':'@NZ,HZ1,HZ2,HZ3',\n",
+    "    'HSD':'@CG,CE1,CE2,CD2,ND1,NE2,HD1,HD2',\n",
+    "}\n",
+    "\n",
+    "commandList=['surf :%g%s'%(iterTraj.top.residue(resID-1).original_resid,\n",
+    "                           masksDict[iterTraj.top.residue(resID-1).name]) \\\n",
+    "             for resID in basicResidueIDs]\n",
+    "pbar=ProgressBarTrajectory(iterTraj,style='tqdm')\n",
+    "SASA_data=pt.compute(commandList,pbar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7aa2f632e29045bba5c75501fa809972",
+       "model_id": "34580e30d46145dfb5142ac27743e0e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,45 +231,11 @@
      "output_type": "display_data"
     },
     {
-     "ename": "KeyError",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-86-0ef8c6645355>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m     basicResidueSASAtable[\n\u001b[1;32m      9\u001b[0m             \u001b[0;34m'%s_%g'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterTraj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresidue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresID\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresID\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         ]=SASA_data[ii]\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mbasicResidueSASAtable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'basicResidueSASA.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mbasicResidueSASAtable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 0"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
-    }
-   ],
-   "source": [
-    "basicResidueIDs=[res.original_resid for res in \\\n",
-    "                 viewStruc.top.residues if res.name in ['HSD','LYS','ARG']]\n",
-    "\n",
-    "commandList=['surf :%g'%iterTraj.top.residue(resID-1).original_resid \\\n",
-    "             for resID in basicResidueIDs]\n",
-    "pbar=ProgressBarTrajectory(iterTraj,style='tqdm')\n",
-    "SASA_data=pt.compute(commandList,pbar)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0bae3b1e05c4df18839c4065eddc6c2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style=u'info', max=1), HTML(value=u'')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "data": {
@@ -225,121 +286,121 @@
        "      <th>0</th>\n",
        "      <td>Piezo_PIP2</td>\n",
        "      <td>0</td>\n",
-       "      <td>231.301604</td>\n",
-       "      <td>135.752731</td>\n",
-       "      <td>90.688006</td>\n",
-       "      <td>37.036016</td>\n",
-       "      <td>81.810311</td>\n",
-       "      <td>31.582857</td>\n",
-       "      <td>158.942089</td>\n",
-       "      <td>227.416121</td>\n",
+       "      <td>87.971682</td>\n",
+       "      <td>72.998160</td>\n",
+       "      <td>80.786466</td>\n",
+       "      <td>31.312725</td>\n",
+       "      <td>67.773444</td>\n",
+       "      <td>20.623376</td>\n",
+       "      <td>55.209823</td>\n",
+       "      <td>135.463408</td>\n",
        "      <td>...</td>\n",
-       "      <td>41.210847</td>\n",
-       "      <td>155.335757</td>\n",
-       "      <td>111.492882</td>\n",
-       "      <td>-5.209885</td>\n",
-       "      <td>140.601920</td>\n",
-       "      <td>84.719489</td>\n",
-       "      <td>16.944188</td>\n",
-       "      <td>148.135060</td>\n",
-       "      <td>128.440404</td>\n",
-       "      <td>290.796227</td>\n",
+       "      <td>43.275383</td>\n",
+       "      <td>69.884503</td>\n",
+       "      <td>24.943980</td>\n",
+       "      <td>4.626739</td>\n",
+       "      <td>88.281732</td>\n",
+       "      <td>16.574375</td>\n",
+       "      <td>15.564438</td>\n",
+       "      <td>38.770691</td>\n",
+       "      <td>96.299466</td>\n",
+       "      <td>130.583524</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Piezo_PIP2</td>\n",
        "      <td>1</td>\n",
-       "      <td>216.110266</td>\n",
-       "      <td>174.780170</td>\n",
-       "      <td>99.509969</td>\n",
-       "      <td>16.703098</td>\n",
-       "      <td>103.300599</td>\n",
-       "      <td>72.856589</td>\n",
-       "      <td>151.898330</td>\n",
-       "      <td>210.569550</td>\n",
+       "      <td>76.917992</td>\n",
+       "      <td>102.304355</td>\n",
+       "      <td>79.381224</td>\n",
+       "      <td>13.995005</td>\n",
+       "      <td>86.148243</td>\n",
+       "      <td>33.957993</td>\n",
+       "      <td>55.538281</td>\n",
+       "      <td>128.435914</td>\n",
        "      <td>...</td>\n",
-       "      <td>103.847289</td>\n",
-       "      <td>162.340189</td>\n",
-       "      <td>127.582129</td>\n",
-       "      <td>37.842588</td>\n",
-       "      <td>111.605389</td>\n",
-       "      <td>113.826849</td>\n",
-       "      <td>61.839898</td>\n",
-       "      <td>158.491856</td>\n",
-       "      <td>118.281692</td>\n",
-       "      <td>288.793531</td>\n",
+       "      <td>77.561030</td>\n",
+       "      <td>116.671583</td>\n",
+       "      <td>39.405101</td>\n",
+       "      <td>36.539325</td>\n",
+       "      <td>56.898822</td>\n",
+       "      <td>23.242080</td>\n",
+       "      <td>33.811875</td>\n",
+       "      <td>34.774065</td>\n",
+       "      <td>88.537691</td>\n",
+       "      <td>131.083016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Piezo_PIP2</td>\n",
        "      <td>2</td>\n",
-       "      <td>231.161291</td>\n",
-       "      <td>155.527715</td>\n",
-       "      <td>86.489593</td>\n",
-       "      <td>9.983953</td>\n",
-       "      <td>101.238810</td>\n",
-       "      <td>65.590852</td>\n",
-       "      <td>151.137150</td>\n",
-       "      <td>200.432515</td>\n",
+       "      <td>92.678538</td>\n",
+       "      <td>90.994392</td>\n",
+       "      <td>68.379834</td>\n",
+       "      <td>15.453099</td>\n",
+       "      <td>90.343862</td>\n",
+       "      <td>27.959345</td>\n",
+       "      <td>53.981236</td>\n",
+       "      <td>125.491502</td>\n",
        "      <td>...</td>\n",
-       "      <td>71.025217</td>\n",
-       "      <td>139.332222</td>\n",
-       "      <td>134.159950</td>\n",
-       "      <td>26.783289</td>\n",
-       "      <td>143.162468</td>\n",
-       "      <td>152.197544</td>\n",
-       "      <td>34.751632</td>\n",
-       "      <td>179.815608</td>\n",
-       "      <td>170.713722</td>\n",
-       "      <td>316.306727</td>\n",
+       "      <td>52.222729</td>\n",
+       "      <td>108.734830</td>\n",
+       "      <td>46.284419</td>\n",
+       "      <td>32.924167</td>\n",
+       "      <td>102.064085</td>\n",
+       "      <td>55.765358</td>\n",
+       "      <td>36.739432</td>\n",
+       "      <td>49.450528</td>\n",
+       "      <td>125.012244</td>\n",
+       "      <td>130.259988</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Piezo_PIP2</td>\n",
        "      <td>3</td>\n",
-       "      <td>228.219199</td>\n",
-       "      <td>141.413725</td>\n",
-       "      <td>90.376183</td>\n",
-       "      <td>4.560580</td>\n",
-       "      <td>93.988088</td>\n",
-       "      <td>28.210977</td>\n",
-       "      <td>159.800871</td>\n",
-       "      <td>207.038475</td>\n",
+       "      <td>88.609785</td>\n",
+       "      <td>87.762004</td>\n",
+       "      <td>72.502762</td>\n",
+       "      <td>1.874848</td>\n",
+       "      <td>84.170820</td>\n",
+       "      <td>14.094714</td>\n",
+       "      <td>57.859521</td>\n",
+       "      <td>128.619427</td>\n",
        "      <td>...</td>\n",
-       "      <td>69.315142</td>\n",
-       "      <td>107.660335</td>\n",
-       "      <td>132.178808</td>\n",
-       "      <td>19.361332</td>\n",
-       "      <td>139.279869</td>\n",
-       "      <td>145.529297</td>\n",
-       "      <td>23.165717</td>\n",
-       "      <td>200.181136</td>\n",
-       "      <td>146.844401</td>\n",
-       "      <td>289.914098</td>\n",
+       "      <td>57.925787</td>\n",
+       "      <td>78.240005</td>\n",
+       "      <td>41.645692</td>\n",
+       "      <td>24.706268</td>\n",
+       "      <td>97.861685</td>\n",
+       "      <td>57.142842</td>\n",
+       "      <td>24.409060</td>\n",
+       "      <td>61.424450</td>\n",
+       "      <td>105.862211</td>\n",
+       "      <td>120.377420</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Piezo_PIP2</td>\n",
        "      <td>4</td>\n",
-       "      <td>251.849992</td>\n",
-       "      <td>146.331118</td>\n",
-       "      <td>116.490590</td>\n",
-       "      <td>12.492968</td>\n",
-       "      <td>92.567033</td>\n",
-       "      <td>54.396674</td>\n",
-       "      <td>151.232110</td>\n",
-       "      <td>217.081149</td>\n",
+       "      <td>104.101779</td>\n",
+       "      <td>87.028277</td>\n",
+       "      <td>98.756076</td>\n",
+       "      <td>4.509094</td>\n",
+       "      <td>88.035775</td>\n",
+       "      <td>19.995091</td>\n",
+       "      <td>51.474539</td>\n",
+       "      <td>130.784876</td>\n",
        "      <td>...</td>\n",
-       "      <td>63.079660</td>\n",
-       "      <td>107.718457</td>\n",
-       "      <td>132.926795</td>\n",
-       "      <td>41.318480</td>\n",
-       "      <td>127.732068</td>\n",
-       "      <td>165.243676</td>\n",
-       "      <td>54.304498</td>\n",
-       "      <td>192.992331</td>\n",
-       "      <td>114.126485</td>\n",
-       "      <td>273.409365</td>\n",
+       "      <td>57.793013</td>\n",
+       "      <td>76.847820</td>\n",
+       "      <td>39.216604</td>\n",
+       "      <td>34.756950</td>\n",
+       "      <td>88.014204</td>\n",
+       "      <td>64.173321</td>\n",
+       "      <td>45.711059</td>\n",
+       "      <td>61.534140</td>\n",
+       "      <td>101.307814</td>\n",
+       "      <td>128.690753</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -347,38 +408,38 @@
        "</div>"
       ],
       "text/plain": [
-       "       System  Frame       ARG_1      ARG_15      ARG_21     ARG_22  \\\n",
-       "0  Piezo_PIP2      0  231.301604  135.752731   90.688006  37.036016   \n",
-       "1  Piezo_PIP2      1  216.110266  174.780170   99.509969  16.703098   \n",
-       "2  Piezo_PIP2      2  231.161291  155.527715   86.489593   9.983953   \n",
-       "3  Piezo_PIP2      3  228.219199  141.413725   90.376183   4.560580   \n",
-       "4  Piezo_PIP2      4  251.849992  146.331118  116.490590  12.492968   \n",
+       "       System  Frame       ARG_1      ARG_15     ARG_21     ARG_22     HSD_27  \\\n",
+       "0  Piezo_PIP2      0   87.971682   72.998160  80.786466  31.312725  67.773444   \n",
+       "1  Piezo_PIP2      1   76.917992  102.304355  79.381224  13.995005  86.148243   \n",
+       "2  Piezo_PIP2      2   92.678538   90.994392  68.379834  15.453099  90.343862   \n",
+       "3  Piezo_PIP2      3   88.609785   87.762004  72.502762   1.874848  84.170820   \n",
+       "4  Piezo_PIP2      4  104.101779   87.028277  98.756076   4.509094  88.035775   \n",
        "\n",
-       "       HSD_27     LYS_30      LYS_42      ARG_63  ...    HSD_4198    ARG_4210  \\\n",
-       "0   81.810311  31.582857  158.942089  227.416121  ...   41.210847  155.335757   \n",
-       "1  103.300599  72.856589  151.898330  210.569550  ...  103.847289  162.340189   \n",
-       "2  101.238810  65.590852  151.137150  200.432515  ...   71.025217  139.332222   \n",
-       "3   93.988088  28.210977  159.800871  207.038475  ...   69.315142  107.660335   \n",
-       "4   92.567033  54.396674  151.232110  217.081149  ...   63.079660  107.718457   \n",
+       "      LYS_30     LYS_42      ARG_63  ...   HSD_4198    ARG_4210   LYS_4213  \\\n",
+       "0  20.623376  55.209823  135.463408  ...  43.275383   69.884503  24.943980   \n",
+       "1  33.957993  55.538281  128.435914  ...  77.561030  116.671583  39.405101   \n",
+       "2  27.959345  53.981236  125.491502  ...  52.222729  108.734830  46.284419   \n",
+       "3  14.094714  57.859521  128.619427  ...  57.925787   78.240005  41.645692   \n",
+       "4  19.995091  51.474539  130.784876  ...  57.793013   76.847820  39.216604   \n",
        "\n",
-       "     LYS_4213   ARG_4222    ARG_4225    LYS_4236   ARG_4242    LYS_4249  \\\n",
-       "0  111.492882  -5.209885  140.601920   84.719489  16.944188  148.135060   \n",
-       "1  127.582129  37.842588  111.605389  113.826849  61.839898  158.491856   \n",
-       "2  134.159950  26.783289  143.162468  152.197544  34.751632  179.815608   \n",
-       "3  132.178808  19.361332  139.279869  145.529297  23.165717  200.181136   \n",
-       "4  132.926795  41.318480  127.732068  165.243676  54.304498  192.992331   \n",
+       "    ARG_4222    ARG_4225   LYS_4236   ARG_4242   LYS_4249    ARG_4252  \\\n",
+       "0   4.626739   88.281732  16.574375  15.564438  38.770691   96.299466   \n",
+       "1  36.539325   56.898822  23.242080  33.811875  34.774065   88.537691   \n",
+       "2  32.924167  102.064085  55.765358  36.739432  49.450528  125.012244   \n",
+       "3  24.706268   97.861685  57.142842  24.409060  61.424450  105.862211   \n",
+       "4  34.756950   88.014204  64.173321  45.711059  61.534140  101.307814   \n",
        "\n",
-       "     ARG_4252    ARG_4254  \n",
-       "0  128.440404  290.796227  \n",
-       "1  118.281692  288.793531  \n",
-       "2  170.713722  316.306727  \n",
-       "3  146.844401  289.914098  \n",
-       "4  114.126485  273.409365  \n",
+       "     ARG_4254  \n",
+       "0  130.583524  \n",
+       "1  131.083016  \n",
+       "2  130.259988  \n",
+       "3  120.377420  \n",
+       "4  128.690753  \n",
        "\n",
        "[5 rows x 509 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
