Added visualization of SASA grouped by sequence ID

--- a/Analyze_Occupancy_Data.ipynb
+++ b/Analyze_Occupancy_Data.ipynb
@@ -1742,6 +1742,248 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 336,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SeqID</th>\n",
+       "      <th>ResName</th>\n",
+       "      <th>All_Atom.ExpDist_Mean</th>\n",
+       "      <th>All_Atom.GammaDist_Mean</th>\n",
+       "      <th>All_Atom.GammaDist_k</th>\n",
+       "      <th>All_Atom.Max_ResTime</th>\n",
+       "      <th>All_Atom.N</th>\n",
+       "      <th>All_Atom.Total_Occupancy</th>\n",
+       "      <th>Coarse_Grain.ExpDist_Mean</th>\n",
+       "      <th>Coarse_Grain.GammaDist_Mean</th>\n",
+       "      <th>Coarse_Grain.GammaDist_k</th>\n",
+       "      <th>Coarse_Grain.Max_ResTime</th>\n",
+       "      <th>Coarse_Grain.N</th>\n",
+       "      <th>Coarse_Grain.Total_Occupancy</th>\n",
+       "      <th>SASA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>782</td>\n",
+       "      <td>ARG</td>\n",
+       "      <td>10.800000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.88</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>12.296042</td>\n",
+       "      <td>12.080842</td>\n",
+       "      <td>3.115913</td>\n",
+       "      <td>68.000000</td>\n",
+       "      <td>201.666667</td>\n",
+       "      <td>2194.0</td>\n",
+       "      <td>125.610598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>796</td>\n",
+       "      <td>ARG</td>\n",
+       "      <td>6.991209</td>\n",
+       "      <td>6.457260</td>\n",
+       "      <td>2.153706</td>\n",
+       "      <td>29.96</td>\n",
+       "      <td>32.666667</td>\n",
+       "      <td>100.40</td>\n",
+       "      <td>7.062708</td>\n",
+       "      <td>6.548619</td>\n",
+       "      <td>9.918797</td>\n",
+       "      <td>152.666667</td>\n",
+       "      <td>302.000000</td>\n",
+       "      <td>1127.0</td>\n",
+       "      <td>120.126611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>802</td>\n",
+       "      <td>ARG</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>80.491001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>803</td>\n",
+       "      <td>ARG</td>\n",
+       "      <td>5.071698</td>\n",
+       "      <td>4.706998</td>\n",
+       "      <td>77.810814</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>18.333333</td>\n",
+       "      <td>6.64</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>35.935173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>811</td>\n",
+       "      <td>LYS</td>\n",
+       "      <td>4.800000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>31.369903</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SeqID ResName  All_Atom.ExpDist_Mean  All_Atom.GammaDist_Mean  \\\n",
+       "0    782     ARG              10.800000                      NaN   \n",
+       "1    796     ARG               6.991209                 6.457260   \n",
+       "2    802     ARG                    NaN                      NaN   \n",
+       "3    803     ARG               5.071698                 4.706998   \n",
+       "4    811     LYS               4.800000                      NaN   \n",
+       "\n",
+       "   All_Atom.GammaDist_k  All_Atom.Max_ResTime  All_Atom.N  \\\n",
+       "0                   NaN                  1.88    3.000000   \n",
+       "1              2.153706                 29.96   32.666667   \n",
+       "2                   NaN                  0.00    0.000000   \n",
+       "3             77.810814                  2.60   18.333333   \n",
+       "4                   NaN                  0.04    0.666667   \n",
+       "\n",
+       "   All_Atom.Total_Occupancy  Coarse_Grain.ExpDist_Mean  \\\n",
+       "0                      2.76                  12.296042   \n",
+       "1                    100.40                   7.062708   \n",
+       "2                      0.00                        NaN   \n",
+       "3                      6.64                        NaN   \n",
+       "4                      0.08                        NaN   \n",
+       "\n",
+       "   Coarse_Grain.GammaDist_Mean  Coarse_Grain.GammaDist_k  \\\n",
+       "0                    12.080842                  3.115913   \n",
+       "1                     6.548619                  9.918797   \n",
+       "2                          NaN                       NaN   \n",
+       "3                          NaN                       NaN   \n",
+       "4                          NaN                       NaN   \n",
+       "\n",
+       "   Coarse_Grain.Max_ResTime  Coarse_Grain.N  Coarse_Grain.Total_Occupancy  \\\n",
+       "0                 68.000000      201.666667                        2194.0   \n",
+       "1                152.666667      302.000000                        1127.0   \n",
+       "2                  0.000000        0.000000                           0.0   \n",
+       "3                  0.000000        0.000000                           0.0   \n",
+       "4                  0.000000        0.000000                           0.0   \n",
+       "\n",
+       "         SASA  \n",
+       "0  125.610598  \n",
+       "1  120.126611  \n",
+       "2   80.491001  \n",
+       "3   35.935173  \n",
+       "4   31.369903  "
+      ]
+     },
+     "execution_count": 336,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sasa_bySeq=sasa_corr\n",
+    "sasa_bySeq=sasa_bySeq.drop(columns='ResID').groupby(['SeqID','ResName']).agg(\n",
+    "    lambda x: x.dropna().mean()).reset_index()\n",
+    "sasa_bySeq.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a272d81fa1c8451b9d7e9dccaa659aa7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "aW50ZXJhY3RpdmUoY2hpbGRyZW49KERyb3Bkb3duKGRlc2NyaXB0aW9uPXUneENvbCcsIG9wdGlvbnM9KCdBbGxfQXRvbS5FeHBEaXN0X01lYW4nLCAnQWxsX0F0b20uR2FtbWFEaXN0X01lYW7igKY=\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact_manual\n",
+    "def plot_columns(xCol=sasa_bySeq.drop(columns=[\"ResName\",\"SeqID\"]).columns,\n",
+    "                 yCol=sasa_bySeq.drop(columns=[\"ResName\",\"SeqID\"]).columns):\n",
+    "    bokeh.io.output_notebook()\n",
+    "    plotData=sasa_bySeq[[xCol,yCol,\"ResName\",\"SeqID\"]].dropna() #,\"All_Atom.N\",'Coarse_Grain.N']]\n",
+    "    plotData=plotData[(plotData[xCol]>0) & (plotData[yCol]>0)]\n",
+    "    source=ColumnDataSource(plotData)\n",
+    "    view1=CDSView(source=source)\n",
+    "    \n",
+    "    ResNames=list(plotData.ResName.unique())\n",
+    "    \n",
+    "    plot_size_and_tools={'plot_height':640,\n",
+    "                         'plot_width':640,\n",
+    "                         'tools':['pan','wheel_zoom',\n",
+    "                                  'undo','redo','reset','save',\n",
+    "                                  'crosshair','hover']}\n",
+    "    \n",
+    "    p1=figure(**plot_size_and_tools)\n",
+    "    p1.circle(x=xCol,y=yCol,\n",
+    "              source=source,\n",
+    "              color=factor_cmap('ResName',palette=Spectral6,factors=ResNames))\n",
+    "    p1.legend.orientation=\"vertical\"\n",
+    "    hover = p1.select(dict(type=HoverTool))\n",
+    "    hover.tooltips = [(colName,\"@{\"+colName+\"}\") for colName in plotData.columns]\n",
+    "    show(p1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
