updated analysis notebook. Improve ease of use for google colab viewers

--- a/Analyze_Occupancy_Data.ipynb
+++ b/Analyze_Occupancy_Data.ipynb
@@ -1,11 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For those using google colab, uncomment the lines in the next two cells below then head to the\n",
+    "visualization section"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#!git clone https://github.com/wesleymsmith/Piezo_PIP2_binding_analysis.git\n",
+    "#!pip install bokeh\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib\n",
@@ -23,9 +33,7 @@
     "import glob\n",
     "\n",
     "import tqdm\n",
-    "import itertools\n",
-    "\n",
-    "import pymc"
+    "import itertools"
    ]
   },
   {
@@ -34,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "baseDir=\"./\""
+    "baseDir=\"./\"\n",
+    "#baseDir=\"Piezo_PIP2_binding_analysis/\""
    ]
   },
   {
@@ -124,16 +133,35 @@
     "It seems to look quite exponential like, so it would make sense to try and fit either a geometric (if we think of each frame like an individual 'trial') or an exponential (if want to think of each run's length as a 'wait time')\n",
     "\n",
     "The exponential distribution with a mean (or characteristic length, $\\lambda$) is given by:\n",
-    "$$p(x,\\lambda)=\\frac{e^{-x/\\lambda}}{\\lambda}$$\n",
+    "$$p_{exp}(x,\\lambda)=\\frac{e^{-x/\\lambda}}{\\lambda}$$\n",
     "\n",
     "\n",
     "To fit an exponential distribution to this data we first compute the characteristic length ($\\gamma$) as the mean ($\\bar{X}$) of the observed residence times ($X_i$)\n",
     "\n",
     "It is possible, however, that the distribution is not perfectly exponential. One common alternative would be to use a gamma distribution instead.\n",
     "\n",
+    "$$p_\\Gamma(x,\\theta,k)=\\frac{x^{k-1}e^{-\\frac{x}{\\theta}}}{\\Gamma(k)\\theta^k}$$\n",
+    "\n",
+    "where $\\Gamma(k)$ is the gamma function, which is essentially an extrapolation of the factorial onto real numbers.\n",
+    "\n",
     "For the gamma distribution, we can use closed form estimators based on a generalized gamma distribution:\n",
     "\n",
-    "$$\\theta=\\frac{1}{N^2}*(N"
+    "$$\\theta=\\frac{1}{N^2}\\left(N\\sum\\limits_{i=1}^{N}x_i\\ln(x_i)-\\sum\\limits_{i=1}^{N}\\ln(x_i)\\sum\\limits_{i=1}^{N}x_i\\right)$$\n",
+    "\n",
+    "$$k=\\frac{N\\sum\\limits_{i=1}^{N}x_i}{\n",
+    "    N\\sum\\limits_{i=1}^{N}x_i\\ln(x_i)-\\sum\\limits_{i=1}^{N}\\ln(x_i)\\sum\\limits_{i=1}^{N}x_i}$$\n",
+    "    \n",
+    "We can also correct for bias:\n",
+    "\n",
+    "$$\\tilde{\\theta}=\\frac{N}{N-1}\\theta$$\n",
+    "\n",
+    "$$\\tilde{k}=k-\\frac{1}{N}\\left(\n",
+    "    3k-\n",
+    "    \\frac{2}{3}\\left(\\frac{k}{1+k}\\right)-\n",
+    "    \\frac{4}{5}\\frac{k}{(1+k)^2}\n",
+    "  \\right)$$\n",
+    "  \n",
+    "for reference: [Wikipedia Gamma Distribution Closed Form Estimators](https://en.wikipedia.org/wiki/Gamma_distribution#Closed-form_estimators)"
    ]
   },
   {
@@ -1665,6 +1693,16 @@
     "    ).reset_index()\n",
     "sasa_corr.to_csv(baseDir+\"SASA_correlation_dataFrame.csv\",index=False)\n",
     "sasa_corr.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualization\n",
+    "\n",
+    "For those who just want to visualize the final results, run the loading cells at the top to\n",
+    "load the needed packages and set the 'baseDir' variable, then start at the cell below."
    ]
   },
   {
