--- a/Compute_Basic_Residue_SASA_Table.ipynb
+++ b/Compute_Basic_Residue_SASA_Table.ipynb
@@ -169,13 +169,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a90d0993a4fe47ac9fa9f0c173ee78ae",
+       "model_id": "6a27df69f5164301aa62cd966ed77fa1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,23 +203,24 @@
     "    'LYS':'@NZ,HZ1,HZ2,HZ3',\n",
     "    'HSD':'@CG,CE1,CE2,CD2,ND1,NE2,HD1,HD2',\n",
     "}\n",
-    "\n",
-    "commandList=['surf :%g%s'%(iterTraj.top.residue(resID-1).original_resid,\n",
-    "                           masksDict[iterTraj.top.residue(resID-1).name]) \\\n",
-    "             for resID in basicResidueIDs]\n",
+    "probeOffset=2.15\n",
+    "commandList=['surf :%g%s offset %.2f'%(\n",
+    "    iterTraj.top.residue(resID-1).original_resid,\n",
+    "    masksDict[iterTraj.top.residue(resID-1).name],\n",
+    "    probeOffset) for resID in basicResidueIDs]\n",
     "pbar=ProgressBarTrajectory(iterTraj,style='tqdm')\n",
     "SASA_data=pt.compute(commandList,pbar)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34580e30d46145dfb5142ac27743e0e8",
+       "model_id": "96cf6354fdcd427da8c3bd5edddc1dd7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -286,121 +287,121 @@
        "      <th>0</th>\n",
        "      <td>Piezo_PIP2</td>\n",
        "      <td>0</td>\n",
-       "      <td>87.971682</td>\n",
-       "      <td>72.998160</td>\n",
-       "      <td>80.786466</td>\n",
-       "      <td>31.312725</td>\n",
-       "      <td>67.773444</td>\n",
-       "      <td>20.623376</td>\n",
-       "      <td>55.209823</td>\n",
-       "      <td>135.463408</td>\n",
+       "      <td>287.440560</td>\n",
+       "      <td>274.898960</td>\n",
+       "      <td>324.281827</td>\n",
+       "      <td>540.105388</td>\n",
+       "      <td>382.686118</td>\n",
+       "      <td>172.673159</td>\n",
+       "      <td>102.452724</td>\n",
+       "      <td>221.306778</td>\n",
        "      <td>...</td>\n",
-       "      <td>43.275383</td>\n",
-       "      <td>69.884503</td>\n",
-       "      <td>24.943980</td>\n",
-       "      <td>4.626739</td>\n",
-       "      <td>88.281732</td>\n",
-       "      <td>16.574375</td>\n",
-       "      <td>15.564438</td>\n",
-       "      <td>38.770691</td>\n",
-       "      <td>96.299466</td>\n",
-       "      <td>130.583524</td>\n",
+       "      <td>494.523318</td>\n",
+       "      <td>278.618895</td>\n",
+       "      <td>116.343258</td>\n",
+       "      <td>629.556884</td>\n",
+       "      <td>299.282841</td>\n",
+       "      <td>140.083915</td>\n",
+       "      <td>646.955674</td>\n",
+       "      <td>103.634013</td>\n",
+       "      <td>282.838529</td>\n",
+       "      <td>205.066848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Piezo_PIP2</td>\n",
        "      <td>1</td>\n",
-       "      <td>76.917992</td>\n",
-       "      <td>102.304355</td>\n",
-       "      <td>79.381224</td>\n",
-       "      <td>13.995005</td>\n",
-       "      <td>86.148243</td>\n",
-       "      <td>33.957993</td>\n",
-       "      <td>55.538281</td>\n",
-       "      <td>128.435914</td>\n",
+       "      <td>334.816766</td>\n",
+       "      <td>183.629963</td>\n",
+       "      <td>283.576915</td>\n",
+       "      <td>578.829623</td>\n",
+       "      <td>384.278017</td>\n",
+       "      <td>103.769143</td>\n",
+       "      <td>109.288093</td>\n",
+       "      <td>243.110699</td>\n",
        "      <td>...</td>\n",
-       "      <td>77.561030</td>\n",
-       "      <td>116.671583</td>\n",
-       "      <td>39.405101</td>\n",
-       "      <td>36.539325</td>\n",
-       "      <td>56.898822</td>\n",
-       "      <td>23.242080</td>\n",
-       "      <td>33.811875</td>\n",
-       "      <td>34.774065</td>\n",
-       "      <td>88.537691</td>\n",
-       "      <td>131.083016</td>\n",
+       "      <td>355.490064</td>\n",
+       "      <td>257.677793</td>\n",
+       "      <td>98.921705</td>\n",
+       "      <td>453.885378</td>\n",
+       "      <td>416.310184</td>\n",
+       "      <td>131.922552</td>\n",
+       "      <td>462.089912</td>\n",
+       "      <td>95.179939</td>\n",
+       "      <td>242.496894</td>\n",
+       "      <td>223.123915</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Piezo_PIP2</td>\n",
        "      <td>2</td>\n",
-       "      <td>92.678538</td>\n",
-       "      <td>90.994392</td>\n",
-       "      <td>68.379834</td>\n",
-       "      <td>15.453099</td>\n",
-       "      <td>90.343862</td>\n",
-       "      <td>27.959345</td>\n",
-       "      <td>53.981236</td>\n",
-       "      <td>125.491502</td>\n",
+       "      <td>275.073755</td>\n",
+       "      <td>202.255450</td>\n",
+       "      <td>342.219028</td>\n",
+       "      <td>560.460974</td>\n",
+       "      <td>336.459908</td>\n",
+       "      <td>111.187833</td>\n",
+       "      <td>102.056689</td>\n",
+       "      <td>240.717753</td>\n",
        "      <td>...</td>\n",
-       "      <td>52.222729</td>\n",
-       "      <td>108.734830</td>\n",
-       "      <td>46.284419</td>\n",
-       "      <td>32.924167</td>\n",
-       "      <td>102.064085</td>\n",
-       "      <td>55.765358</td>\n",
-       "      <td>36.739432</td>\n",
-       "      <td>49.450528</td>\n",
-       "      <td>125.012244</td>\n",
-       "      <td>130.259988</td>\n",
+       "      <td>403.091530</td>\n",
+       "      <td>300.392173</td>\n",
+       "      <td>85.993276</td>\n",
+       "      <td>465.202440</td>\n",
+       "      <td>257.272547</td>\n",
+       "      <td>72.081927</td>\n",
+       "      <td>535.732493</td>\n",
+       "      <td>82.812868</td>\n",
+       "      <td>218.384865</td>\n",
+       "      <td>218.979063</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Piezo_PIP2</td>\n",
        "      <td>3</td>\n",
-       "      <td>88.609785</td>\n",
-       "      <td>87.762004</td>\n",
-       "      <td>72.502762</td>\n",
-       "      <td>1.874848</td>\n",
-       "      <td>84.170820</td>\n",
-       "      <td>14.094714</td>\n",
-       "      <td>57.859521</td>\n",
-       "      <td>128.619427</td>\n",
+       "      <td>290.577028</td>\n",
+       "      <td>193.342330</td>\n",
+       "      <td>351.953645</td>\n",
+       "      <td>680.849566</td>\n",
+       "      <td>356.348260</td>\n",
+       "      <td>126.432774</td>\n",
+       "      <td>103.091409</td>\n",
+       "      <td>239.646221</td>\n",
        "      <td>...</td>\n",
-       "      <td>57.925787</td>\n",
-       "      <td>78.240005</td>\n",
-       "      <td>41.645692</td>\n",
-       "      <td>24.706268</td>\n",
-       "      <td>97.861685</td>\n",
-       "      <td>57.142842</td>\n",
-       "      <td>24.409060</td>\n",
-       "      <td>61.424450</td>\n",
-       "      <td>105.862211</td>\n",
-       "      <td>120.377420</td>\n",
+       "      <td>418.481454</td>\n",
+       "      <td>332.128525</td>\n",
+       "      <td>96.114586</td>\n",
+       "      <td>567.150851</td>\n",
+       "      <td>259.985159</td>\n",
+       "      <td>88.943817</td>\n",
+       "      <td>501.348161</td>\n",
+       "      <td>95.815112</td>\n",
+       "      <td>247.253744</td>\n",
+       "      <td>220.677821</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Piezo_PIP2</td>\n",
        "      <td>4</td>\n",
-       "      <td>104.101779</td>\n",
-       "      <td>87.028277</td>\n",
-       "      <td>98.756076</td>\n",
-       "      <td>4.509094</td>\n",
-       "      <td>88.035775</td>\n",
-       "      <td>19.995091</td>\n",
-       "      <td>51.474539</td>\n",
-       "      <td>130.784876</td>\n",
+       "      <td>233.699040</td>\n",
+       "      <td>203.015984</td>\n",
+       "      <td>240.717316</td>\n",
+       "      <td>603.387966</td>\n",
+       "      <td>328.979551</td>\n",
+       "      <td>127.112652</td>\n",
+       "      <td>111.054757</td>\n",
+       "      <td>232.711257</td>\n",
        "      <td>...</td>\n",
-       "      <td>57.793013</td>\n",
-       "      <td>76.847820</td>\n",
-       "      <td>39.216604</td>\n",
-       "      <td>34.756950</td>\n",
-       "      <td>88.014204</td>\n",
-       "      <td>64.173321</td>\n",
-       "      <td>45.711059</td>\n",
-       "      <td>61.534140</td>\n",
-       "      <td>101.307814</td>\n",
-       "      <td>128.690753</td>\n",
+       "      <td>410.296426</td>\n",
+       "      <td>309.629827</td>\n",
+       "      <td>104.504957</td>\n",
+       "      <td>468.422037</td>\n",
+       "      <td>291.298963</td>\n",
+       "      <td>93.244969</td>\n",
+       "      <td>460.571667</td>\n",
+       "      <td>93.286728</td>\n",
+       "      <td>271.298287</td>\n",
+       "      <td>222.949990</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -408,38 +409,38 @@
        "</div>"
       ],
       "text/plain": [
-       "       System  Frame       ARG_1      ARG_15     ARG_21     ARG_22     HSD_27  \\\n",
-       "0  Piezo_PIP2      0   87.971682   72.998160  80.786466  31.312725  67.773444   \n",
-       "1  Piezo_PIP2      1   76.917992  102.304355  79.381224  13.995005  86.148243   \n",
-       "2  Piezo_PIP2      2   92.678538   90.994392  68.379834  15.453099  90.343862   \n",
-       "3  Piezo_PIP2      3   88.609785   87.762004  72.502762   1.874848  84.170820   \n",
-       "4  Piezo_PIP2      4  104.101779   87.028277  98.756076   4.509094  88.035775   \n",
+       "       System  Frame       ARG_1      ARG_15      ARG_21      ARG_22  \\\n",
+       "0  Piezo_PIP2      0  287.440560  274.898960  324.281827  540.105388   \n",
+       "1  Piezo_PIP2      1  334.816766  183.629963  283.576915  578.829623   \n",
+       "2  Piezo_PIP2      2  275.073755  202.255450  342.219028  560.460974   \n",
+       "3  Piezo_PIP2      3  290.577028  193.342330  351.953645  680.849566   \n",
+       "4  Piezo_PIP2      4  233.699040  203.015984  240.717316  603.387966   \n",
        "\n",
-       "      LYS_30     LYS_42      ARG_63  ...   HSD_4198    ARG_4210   LYS_4213  \\\n",
-       "0  20.623376  55.209823  135.463408  ...  43.275383   69.884503  24.943980   \n",
-       "1  33.957993  55.538281  128.435914  ...  77.561030  116.671583  39.405101   \n",
-       "2  27.959345  53.981236  125.491502  ...  52.222729  108.734830  46.284419   \n",
-       "3  14.094714  57.859521  128.619427  ...  57.925787   78.240005  41.645692   \n",
-       "4  19.995091  51.474539  130.784876  ...  57.793013   76.847820  39.216604   \n",
+       "       HSD_27      LYS_30      LYS_42      ARG_63  ...    HSD_4198  \\\n",
+       "0  382.686118  172.673159  102.452724  221.306778  ...  494.523318   \n",
+       "1  384.278017  103.769143  109.288093  243.110699  ...  355.490064   \n",
+       "2  336.459908  111.187833  102.056689  240.717753  ...  403.091530   \n",
+       "3  356.348260  126.432774  103.091409  239.646221  ...  418.481454   \n",
+       "4  328.979551  127.112652  111.054757  232.711257  ...  410.296426   \n",
        "\n",
-       "    ARG_4222    ARG_4225   LYS_4236   ARG_4242   LYS_4249    ARG_4252  \\\n",
-       "0   4.626739   88.281732  16.574375  15.564438  38.770691   96.299466   \n",
-       "1  36.539325   56.898822  23.242080  33.811875  34.774065   88.537691   \n",
-       "2  32.924167  102.064085  55.765358  36.739432  49.450528  125.012244   \n",
-       "3  24.706268   97.861685  57.142842  24.409060  61.424450  105.862211   \n",
-       "4  34.756950   88.014204  64.173321  45.711059  61.534140  101.307814   \n",
+       "     ARG_4210    LYS_4213    ARG_4222    ARG_4225    LYS_4236    ARG_4242  \\\n",
+       "0  278.618895  116.343258  629.556884  299.282841  140.083915  646.955674   \n",
+       "1  257.677793   98.921705  453.885378  416.310184  131.922552  462.089912   \n",
+       "2  300.392173   85.993276  465.202440  257.272547   72.081927  535.732493   \n",
+       "3  332.128525   96.114586  567.150851  259.985159   88.943817  501.348161   \n",
+       "4  309.629827  104.504957  468.422037  291.298963   93.244969  460.571667   \n",
        "\n",
-       "     ARG_4254  \n",
-       "0  130.583524  \n",
-       "1  131.083016  \n",
-       "2  130.259988  \n",
-       "3  120.377420  \n",
-       "4  128.690753  \n",
+       "     LYS_4249    ARG_4252    ARG_4254  \n",
+       "0  103.634013  282.838529  205.066848  \n",
+       "1   95.179939  242.496894  223.123915  \n",
+       "2   82.812868  218.384865  218.979063  \n",
+       "3   95.815112  247.253744  220.677821  \n",
+       "4   93.286728  271.298287  222.949990  \n",
        "\n",
        "[5 rows x 509 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
