Added notebook to explore using bootstrapping for confidence interval generation

--- a/Analyze_Occupancy_Data.ipynb
+++ b/Analyze_Occupancy_Data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 92,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -23,40 +23,10 @@
     "id": "nwt2iVwfBNu4",
     "outputId": "c9917617-2c79-4381-e11a-ddd115ec9e3d"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'Piezo_PIP2_binding_analysis'...\n",
-      "remote: Enumerating objects: 555, done.\u001b[K\n",
-      "remote: Counting objects: 100% (555/555), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (105/105), done.\u001b[K\n",
-      "remote: Total 1826 (delta 399), reused 546 (delta 397), pack-reused 1271\u001b[K\n",
-      "Receiving objects: 100% (1826/1826), 97.86 MiB | 10.66 MiB/s, done.\n",
-      "Resolving deltas: 100% (1292/1292), done.\n",
-      "Checking out files: 100% (2675/2675), done.\n",
-      "\u001b[33mDEPRECATION: Python 2.7 will reach the end of its life on January 1st, 2020. Please upgrade your Python as Python 2.7 won't be maintained after that date. A future version of pip will drop support for Python 2.7.\u001b[0m\n",
-      "Requirement already satisfied: bokeh in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (1.3.4)\n",
-      "Requirement already satisfied: numpy>=1.7.1 in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (from bokeh) (1.16.2)\n",
-      "Requirement already satisfied: pillow>=4.0 in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (from bokeh) (5.4.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (from bokeh) (2.8.0)\n",
-      "Requirement already satisfied: PyYAML>=3.10 in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (from bokeh) (5.1)\n",
-      "Requirement already satisfied: Jinja2>=2.7 in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (from bokeh) (2.10)\n",
-      "Requirement already satisfied: futures>=3.0.3 in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (from bokeh) (3.2.0)\n",
-      "Requirement already satisfied: packaging>=16.8 in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (from bokeh) (19.0)\n",
-      "Requirement already satisfied: six>=1.5.2 in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (from bokeh) (1.12.0)\n",
-      "Requirement already satisfied: tornado>=4.3 in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (from bokeh) (5.1.1)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (from Jinja2>=2.7->bokeh) (1.1.1)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (from packaging>=16.8->bokeh) (2.3.1)\n",
-      "Requirement already satisfied: singledispatch in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (from tornado>=4.3->bokeh) (3.4.0.3)\n",
-      "Requirement already satisfied: backports_abc>=0.4 in /Users/wbotellosmith/anaconda2/lib/python2.7/site-packages (from tornado>=4.3->bokeh) (0.5)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!git clone https://github.com/wesleymsmith/Piezo_PIP2_binding_analysis.git\n",
-    "!pip install bokeh\n",
+    "#!git clone https://github.com/wesleymsmith/Piezo_PIP2_binding_analysis.git\n",
+    "#!pip install bokeh\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib\n",
@@ -79,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 93,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -93,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 94,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -119,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 95,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -147,7 +117,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4a11a56f3bc4c1994d5fd733c14d4b3",
+       "model_id": "0a93724854fb4abf8db79d0bdea44a07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,6 +172,8 @@
     "id": "43rqcuElBNvA"
    },
    "source": [
+    "# Residence time distribution models\n",
+    "\n",
     "Now we can extract residence times from this occupancy by first finding\n",
     "all 'runs' within the occupancy series of each residue.\n",
     "\n",
@@ -243,8 +215,221 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Truncation bias correction for exponential distribution\n",
+    "\n",
+    "Before continuing lets first examine one potentially hazardous source of bias, turncation bias.\n",
+    "\n",
+    "Formally, when one samples a distribution such that only samples which fall within a given range $[a,b]$ are retained, then the resulting sample effectively is taken from a truncated distribution rather than a full distribution.\n",
+    "\n",
+    "E.g. if the full distribution $f(x)$ for a given observable is sampled such that only values of $x$ falling between $a$ and $b$ are retained, then one the truncated distribution is given by:\n",
+    "$$g(x)=\\begin{cases} \n",
+    "      \\frac{f(x)}{\\int_{a}^{b}{f(x)dx}} & x \\in [a,b] \\\\\n",
+    "      0 & x \\notin [a,b]\n",
+    "   \\end{cases}$$\n",
+    "\n",
+    "in the case of an exponential distribution this yields:\n",
+    "\n",
+    "$$g(x,\\lambda)=\\frac{\\lambda e^{-\\lambda x}}{e^{-a\\lambda}-e^{-b\\lambda}};x\\in[a,b]$$\n",
+    "\n",
+    "\n",
+    "Since we are gathering data from simulations of fixed duration and also at fixed sample intervals, we have an inherent limit on the resulting retention times that we can obtain. Specifically we cannot obtain a retention time that is longer than our simulation length, nor can we attain ones corresponding to times shorter than our sample interval length.\n",
+    "\n",
+    "This means that we are artificially truncating the resulting distribution. The shorter our simulation length, the more the mean is biased to the left while the longer our sample interval is, the more the mean will be biased to the right.\n",
+    "\n",
+    "Fortunately, for the exponential distribution, we can rederive our maximum likely hood estimator using the appropriate truncated exponential distribution. \n",
+    "\n",
+    "Now, if we assume that the probability of observing a given retention time in a simulation is independent of the retention times observed previously in the simulation. Then we can then express the likelyhood $L(\\lambda)$ that a set of retention lengths $X={x_1,x_2,...,x_N}$ could be observed if they were sampled from a truncated distribution $g(x,\\lambda)$ as the prodcut of $g(x,\\lambda)$ over $X$:\n",
+    "\n",
+    "$$L(\\lambda)=\\prod_{i=1}^{n}{g(x_i,\\lambda)}$$\n",
+    "\n",
+    "Without going into the full derivation, we find that the derivative of the log likelyhood with respect to $\\lambda$ (reciporical of mean) is given by:\n",
+    "\n",
+    "$$\\frac{d}{d\\lambda}\\left( \\log{L(\\lambda)} \\right)=\n",
+    "\\frac{N}{\\lambda}+N\n",
+    "\\frac{a-b e^{(a-b)\\lambda}}\n",
+    "{1-e^{(a-b)\\lambda}}-N\\langle x \\rangle$$\n",
+    "\n",
+    "where $a$ and $b$ are the sample interval and simulation length respectively, $N$ is the total count of the sampled distribution histogram for the simulation (i.e. total number of retention time intervals observed), and $\\langle x \\rangle$ is the mean of the observed retention time intervals for the simulation\n",
+    "\n",
+    "In the case of multiple simulations, the right hand side can be summed using the appropriate N, b, and a for each simulation.\n",
+    "\n",
+    "While there is no apparent closed form solution for the root of the above equation, it can be attained numerically fairly easily using sp.optimize.root. The reciprocal of the sample mean over all simulations (i.e. $\\langle\\langle x \\rangle\\rangle^{-1}$) would serve as a good choice for initial value.\n",
+    "\n",
+    "We implement this below as a function which takes as an input a list simulation data where each entry is a list or tuple containing:\n",
+    "    1. the histogram distribution (bins,bincounts)\n",
+    "    2. the lower bound\n",
+    "    3. the upper bound\n",
+    "    \n",
+    "The function then returns the target function (derivative of log likelyhood of lambda) that can be optimized (e.g. fed into sp.optimize.root)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 617,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def genTruncatedExpEquations(dataList,verbose=False):\n",
+    "    XhistList,aList,bList=dataList\n",
+    "    aList=np.array(aList)\n",
+    "    bList=np.array(bList)\n",
+    "    finiteB=np.nonzero(np.isfinite(bList))\n",
+    "    nFiniteB=np.nonzero(finiteB==False)\n",
+    "    Xsums=np.array([np.sum(Xhist[0]*Xhist[1]) for Xhist in XhistList])\n",
+    "    Xcounts=np.array([np.sum(Xhist[1]) for Xhist in XhistList])\n",
+    "    if verbose:\n",
+    "        print 'truncation bounds:',\n",
+    "        print zip(aList,bList)\n",
+    "        print 'Histogram Mass Products:',\n",
+    "        print Xsums\n",
+    "        print 'Histogram Counts:',\n",
+    "        print Xcounts[finiteB]\n",
+    "        print 'finte upper bound list:',\n",
+    "        print finiteB\n",
+    "        print 'infinite upper bound list:',\n",
+    "        print nFiniteB\n",
+    "        print bList[finiteB]\n",
+    "    Nterm=lambda l: np.sum(Xcounts)/l\n",
+    "    finiteBterm=lambda l: np.sum(\n",
+    "        Xcounts[finiteB]* \\\n",
+    "        (aList[finiteB]- \\\n",
+    "             bList[finiteB]*np.exp((aList[finiteB]-bList[finiteB])*l))/ \\\n",
+    "        (1-np.exp((aList[finiteB]-bList[finiteB])*l)))\n",
+    "    xSumTerm=np.sum(Xsums)\n",
+    "    if verbose:\n",
+    "        print 'combined sample mean: %.3f (lambda = %f)'%(\n",
+    "            xSumTerm/np.sum(Xcounts),np.sum(Xcounts)/xSumTerm)\n",
+    "    if np.sum(nFiniteB)>0:\n",
+    "        infBterm=lambda l: np.sum(Xcounts[nFiniteB]*aList[nFiniteB])\n",
+    "        optFun=lambda l: Nterm(l) + finiteBterm(l) + infBterm(l) - xSumTerm\n",
+    "    else:\n",
+    "        optFun=lambda l: Nterm(l) + finiteBterm(l) - xSumTerm\n",
+    "    return optFun"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before applying this directly to simulation data, lets have a look at how it behaves on some test distributions, constructed to model results of a typical all atom simulation.\n",
+    "\n",
+    "To do so we select a lambda value for the true exponential distribution then use np.random.choice to create a corresponding sample after truncating to a lower bound of 1 (1 ns sample rate) and upper bound of 1000 (1 microsecond simulation length).\n",
+    "\n",
+    "We add a pair of interaction widgets to allow interactive control of sample size and true mean.\n",
+    "\n",
+    "Note that the results will be different each time the simulation updates because np.random.choice will generate a new sample every time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 690,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f72f6247ad0e4feb823a1bafe89f2911",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "aW50ZXJhY3RpdmUoY2hpbGRyZW49KEZsb2F0TG9nU2xpZGVyKHZhbHVlPTIuMCwgZGVzY3JpcHRpb249dSd0cnVlTWVhbicpLCBJbnRUZXh0KHZhbHVlPTEwLCBkZXNjcmlwdGlvbj11J25TYW3igKY=\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact\n",
+    "def testModel(trueMean=widgets.FloatLogSlider(\n",
+    "                base=10,min=0,max=4,step=.1,value=2),\n",
+    "              nSamples=widgets.IntText(\n",
+    "                min=1,max=1000,value=10)):\n",
+    "    #trueMean=600.0\n",
+    "    trueLambda=1/trueMean\n",
+    "    nSamples=nSamples\n",
+    "    print \"target sample count: %g\"%nSamples\n",
+    "    tLower=.1\n",
+    "    tBin=1\n",
+    "    tUpper=200.0\n",
+    "    print 'Upper Bound: %f'%tUpper\n",
+    "    print 'Lower Bound: %f'%tLower \n",
+    "    print 'Bin width: %f'%tBin\n",
+    "    binSet=np.arange(tLower,tUpper,tLower)\n",
+    "    normFactor=np.exp(-tLower*trueLambda)-np.exp(-tUpper*trueLambda)\n",
+    "    #normFactor\n",
+    "    pTestFun=lambda x: trueLambda*np.exp(-trueLambda*x)/normFactor\n",
+    "    tempProbs=pTestFun(binSet)#*np.exp(np.random.normal(0,.005,len(binSet)))\n",
+    "    tempProbs=tempProbs/np.sum(tempProbs)\n",
+    "    distSample=np.random.choice(binSet,size=nSamples,p=tempProbs)\n",
+    "    #tempDat=np.histogram(distSample,bins=np.concatenate([[0.],binSet]))\n",
+    "    #testDat=tempDat[0]\n",
+    "    \n",
+    "    binSet=np.arange(tBin,tUpper,tBin)\n",
+    "    tempDat=np.histogram(distSample,bins=np.concatenate([[0.],binSet]))\n",
+    "    testDat=tempDat[0]\n",
+    "    \n",
+    "    sampleMean=np.sum((binSet)*testDat/np.sum(testDat))\n",
+    "    print 'Total Sample Counts: %g'%np.sum(testDat)\n",
+    "    plt.plot(binSet[np.nonzero(testDat)],\n",
+    "             testDat[np.nonzero(testDat)],label='Data')\n",
+    "    plt.scatter(binSet[np.nonzero(testDat)],\n",
+    "                1.0*testDat[np.nonzero(testDat)],label='Data')\n",
+    "    trueVals=trueLambda*np.exp(-trueLambda*binSet[np.nonzero(testDat)])\n",
+    "    trueVals=trueVals/np.sum(trueVals)*nSamples\n",
+    "    plt.plot(binSet[np.nonzero(testDat)],\n",
+    "             trueVals,label='TrueDist')\n",
+    "\n",
+    "    modelDat=1./sampleMean*np.exp(-(binSet[np.nonzero(testDat)])/sampleMean)\n",
+    "    modelDat=modelDat/np.sum(modelDat)\n",
+    "    plt.plot(binSet[np.nonzero(testDat)],\n",
+    "             modelDat*nSamples,label='BiasedModel')\n",
+    "    #plt.legend()\n",
+    "    #plt.show()\n",
+    "    print '--- --- --- ---'\n",
+    "    print 'true mean: %f; true Lambda: %f'%(1./trueLambda,trueLambda)\n",
+    "    print 'biased estimate of mean (sample mean): %f; biased lambda: %f'%(\n",
+    "        sampleMean,1./sampleMean)\n",
+    "    #genTruncatedExpEquations([(np.arange(5)+1,np)])\n",
+    "\n",
+    "    testFun=genTruncatedExpEquations([[(binSet,testDat)],[tLower],[tUpper]])\n",
+    "    #testRange=np.linspace(485,497,11)\n",
+    "    optLam=sp.optimize.root(testFun,1./sampleMean,tol=1e-12).x\n",
+    "    #print testFun(optLam)\n",
+    "    print 'corrected mean = %f (lambda = %f)'%(1./optLam,optLam)\n",
+    "    print '--- --- --- ---'\n",
+    "    #print testRange\n",
+    "    #print map(testFun,testRange)\n",
+    "    #plt.plot(1./testRange,map(testFun,1./testRange))\n",
+    "    #plt.grid()\n",
+    "    #plt.show()\n",
+    "\n",
+    "\n",
+    "    modelDat=optLam*np.exp(-(binSet[np.nonzero(testDat)])*optLam)\n",
+    "    modelDat=modelDat/np.sum(modelDat)\n",
+    "    print np.sum(modelDat)\n",
+    "    plt.plot(binSet[np.nonzero(testDat)],\n",
+    "             modelDat*nSamples,label='CorrectedModel')\n",
+    "    plt.legend()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see above the trunctation correction seems to yield a small improvement in general (although random chance involved in the sampling procedure can sometimes result in the biased model being better).\n",
+    "\n",
+    "However, there is only a significant advantage when the true mean is close to either the sample interval or simulation length. When the true mean falls near to the mid point of those values (i.e. the sampling interval and simulation length), the biased and corrected result are nearly identical."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -282,6 +467,19 @@
     "    if bias_correction & (Nv>2):\n",
     "        Nv=Nv-2\n",
     "    return (np.sum(bin_dist[0]*bin_dist[1])/(1.*Nv))\n",
+    "\n",
+    "def solveTruncationBias():\n",
+    "    \n",
+    "\n",
+    "def frequencyDistribution_mle_truncated_exp_params(\n",
+    "    bin_dist,lower=0,upper=np.inf):\n",
+    "    if np.isfinite(upper):\n",
+    "        b=upper\n",
+    "        a=lower\n",
+    "        \n",
+    "    else:\n",
+    "        a=lower\n",
+    "        \n",
     "\n",
     "def beta_dist(x,a,b):\n",
     "    return (x**(a-1.)*(1.-x)**(b-1.))/\\\n",
