Split SASA correlation analysis and visualization into separate notebooks

--- a/Bootstrap_Testing.ipynb
+++ b/Bootstrap_Testing.ipynb
@@ -806,7 +806,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1551,26 +1551,6 @@
     "plt.xlabel('True Mean')\n",
     "plt.ylabel('Bootstrap Mean')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.388888888888889"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2.0*1000/60/24."
    ]
   },
   {
